# beat-arc-agi-3

./: .gitignore  pyproject.toml  sample.env
data/arc-agi-3-schema-traces/: .gitattributes  README.md  TRACE_TOOL_ANALYSIS.md  score_trajectories.py
data/arc-agi-3-schema-traces/claude_fable_opus/: evaluation_results.csv
data/arc-agi-3-schema-traces/gpt_5_6_sol/: baseline_actions.csv  evaluation_results.csv
data/schema-harness/: article.md  theoretical-grounding.md
data/synthesis-course/2025/: Assignment1.md  Assignment2.md  Assignment3.md  Assignment4.md  Lecture1.md  TOC.md  (+34 more)
docs/: README.md  architecture.md  configuration.md  contracts.md  evaluation.md  goal.md  grounding.md
src/beat_arc_agi_3/: __init__.py  __main__.py  _world_model_worker.py  adapter.py  agent.py  config.py  conversation.py  dependencies.py  events.py  grid_analysis.py  history.py  loop.py  oauth_openai_codex.py  oauth_store.py  observer.py  observer_web.py  openai_codex_model.py  process.py  restart.py  runner.py  sandbox.py  schemas.py  session.py  strategy.py  synthesis.py  timeline.py  workspace.py  world_model.py
tests/: test_adapter.py  test_agent.py  test_backtest.py  test_cli.py  test_config.py  test_edit_file.py  test_evals.py  test_events.py  test_history.py  test_level_lifecycle.py  test_loop.py  test_oauth.py  test_oauth_store.py  test_observer.py  test_openai_codex_model.py  test_read_file.py  test_real_process.py  test_restart.py  test_run_bfs.py  test_run_python.py  test_schemas.py  test_session.py  test_strategy.py  test_timeline.py  test_world_model.py  test_write_file.py
(+937 files in other folders)
