[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beat-arc-agi-3"
version = "0.1.0"
description = "ARC-AGI-3 agent workspace"
requires-python = ">=3.12"
dependencies = [
    "arc-agi>=0.9.9",
    "pydantic-ai",
    "pydantic-settings",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/beat_arc_agi_3"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "paid_integration: makes paid model requests and performs real ARC environment actions",
]
